--- a/style.css
+++ b/style.css
@@ -190,10 +190,10 @@ input {
 
 }
 
-.form-control:focus {
+/* .form-control:focus {
   border-color: #1e439b;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(30, 102, 195);
-}
+} */
 
 .relative input:focus+i.fa {
   border-left: 20px solid transparent;
@@ -216,29 +216,7 @@ input {
 fieldset[disabled] .form-control {
   background-color: #fff;
 }
-
-/* --- Thanks Message Popup --- */
-.thanks {
-  max-width: calc(100vw - 40px);
-  width: 200px;
-  height: auto;
-  background-color: #444;
-  border-radius: 8px;
-  box-shadow: 0 0 40px -10px #000;
-  padding: 20px;
-  box-sizing: border-box;
-  position: relative;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  transition: all .3s;
-}
-
-.thanks h4,
-.thanks p {
-  color: #fff;
-  text-align: center;
-}
+ 
 
 /* --- Animated Buttons --- */
 .movebtn {
@@ -282,8 +260,8 @@ fieldset[disabled] .form-control {
 .movebtnsu:active {
   background-color: transparent;
   color: #FFF;
-  border-color: #1e439b;
-  box-shadow: inset 96px 0 0 0 #1e439b;
+  /* border-color: #1e439b;
+  box-shadow: inset 96px 0 0 0 #1e439b; */
 }
 
 
