--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ p.white {
 
 #navbarSupportedContent a {
   font-size: 1.2rem;
+  margin-right: 4rem;
 }
 
 #Embedded_Hard {
@@ -92,8 +93,7 @@ p.white {
   top: 0;
   position: absolute;
 }
-
-
+ 
 
 .form {
   max-width: calc(100vw - 40px);
@@ -123,7 +123,7 @@ form:before {
 
 .form h2 {
   margin: 10px 0;
-  /* padding-bottom: 10px; */
+   
   width: 163px;
   color: #1e439b;
   font-size: 22px;
@@ -190,10 +190,7 @@ input {
 
 }
 
-/* .form-control:focus {
-  border-color: #1e439b;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(30, 102, 195);
-} */
+ 
 
 .relative input:focus+i.fa {
   border-left: 20px solid transparent;
@@ -218,14 +215,14 @@ fieldset[disabled] .form-control {
 }
  
 
-/* --- Animated Buttons --- */
-.movebtn {
+ 
+.movebtn{
   background-color: transparent;
-  display: inline-block;
-  width: 100px;
+  display:inline-block;
+  width:100px;
   background-image: none;
   padding: 8px 10px;
-  margin-bottom: 20px;
+  margin-bottom:20px;
   border-radius: 0;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
@@ -233,19 +230,16 @@ fieldset[disabled] .form-control {
   -webkit-transition-timing-function: cubic-bezier(0.5, 1.65, 0.37, 0.66);
   transition-timing-function: cubic-bezier(0.5, 1.65, 0.37, 0.66);
 }
-
 .movebtnre {
   border: 2px solid #ff5501;
   box-shadow: inset 0 0 0 0 #ff5501;
-  color: #ff5501;
+  color:#ff5501;
 }
-
 .movebtnsu {
   border: 2px solid #1e439b;
   box-shadow: inset 0 0 0 0 #1e439b;
   color: #1e439b;
 }
-
 .movebtnre:focus,
 .movebtnre:hover,
 .movebtnre:active {
@@ -254,18 +248,17 @@ fieldset[disabled] .form-control {
   border-color: #ff5501;
   box-shadow: inset 96px 0 0 0 #ff5501;
 }
-
 .movebtnsu:focus,
 .movebtnsu:hover,
 .movebtnsu:active {
   background-color: transparent;
   color: #FFF;
-  /* border-color: #1e439b;
-  box-shadow: inset 96px 0 0 0 #1e439b; */
+  border-color: #1e439b;
+  box-shadow: inset 96px 0 0 0 #1e439b;
 }
 
 
-/* --- Media Queries --- */
+ 
 
 @media only screen and (max-width: 600px) {
   p:before {
@@ -1035,9 +1028,9 @@ td {
   background-color: #86b4ef;
 }
 
-#relaykeyfesp {
+/* #relaykeyfesp {
   margin-top: 5rem !important;
-}
+} */
 
 #relaykeyfesp span {
   font-weight: bold;
@@ -1578,7 +1571,16 @@ td {
     align-items: center;
 
   }
-
+  #Panel_de {
+    margin-top: 5rem !important;
+}
+#Embedded_Hard {
+  margin-top: 5rem;
+}
+.advertisers-service-sec .col {
+  padding: 1px 3em 1em 3em;
+  text-align: center;
+}
   .welcomediv {
     height: 44rem;
     margin-bottom: 1rem;
@@ -1686,7 +1688,7 @@ td {
   } */
 
   #itimghideandview {
-    padding-top: 2.5rem;
+    padding-top: 0rem !important;
     padding-bottom: 1rem;
   }
 
